force-app/main/default/objects/Alert__c/fields/P_K__c.field-meta.xml
<CustomField>
    <fullName>P_K__c</fullName>
    <formula>Business_Name__r.Back_Office_PK__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>P.K</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>