force-app/main/default/objects/Alert__c/fields/Paypal_account_provisioned_and_operation__c.field-meta.xml
<CustomField>
    <fullName>Paypal_account_provisioned_and_operation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Paypal account provisioned and operation</label>
    <type>Checkbox</type>
</CustomField>