force-app/main/default/objects/Alert__c/fields/Pending_for_manager__c.field-meta.xml
<CustomField>
    <fullName>Pending_for_manager__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pending for manager</label>
    <type>Checkbox</type>
</CustomField>