force-app/main/default/objects/Alert__c/fields/Rate_Critical_threshold__c.field-meta.xml
<CustomField>
    <fullName>Rate_Critical_threshold__c</fullName>
    <formula>If((ISPICKVAL(Issue_KPI__c,&quot;Defective Rate&quot;) &amp;&amp; (ISPICKVAL(Category__c,&quot;MacBook&quot;) || ISPICKVAL(Category__c,&quot;Tablets&quot;) || ISPICKVAL(Category__c,&quot;Smartphone&quot;))), 0,
If(ISPICKVAL(Issue_KPI__c,&quot;Defective Rate&quot;) ,8.50,
if(ISPICKVAL(Issue_KPI__c,&quot;Late Response Rate&quot;),40,
if(ISPICKVAL(Issue_KPI__c,&quot;CSAT&quot;),1.5,
if(ISPICKVAL(Issue_KPI__c,&quot;Untracked Orders Rate&quot;),20,
if(ISPICKVAL(Issue_KPI__c,&quot;Late Delivery Rate&quot;),20,
if(ISPICKVAL(Issue_KPI__c,&quot;Accessories Rate&quot;),5,
if(ISPICKVAL(Issue_KPI__c,&quot;Cancellation Rate&quot;),5,
if(ISPICKVAL(Issue_KPI__c,&quot;Esthetic Rate&quot;),5,
if(ISPICKVAL(Issue_KPI__c,&quot;Wrong Product Rate&quot;),4,

if(ISPICKVAL(Issue_KPI__c,&quot;Perfect Order Rate&quot;),0.85,
if(OR(ISPICKVAL(Issue_KPI__c,&quot;On Time Delivery Rate Self-care&quot;), ISPICKVAL(Issue_KPI__c,&quot;On Time Delivery Rate&quot;)),0.8,

if(ISPICKVAL(Issue_KPI__c,&quot;Buyback - Pending Order rate&quot;),0.35,
if(ISPICKVAL(Issue_KPI__c,&quot;Buyback - On-hold rate&quot;),0.35,


if(ISPICKVAL(Issue_KPI__c,&quot;Buyback - Counter-Proposal (Functional) rate&quot;),0.50,
if(ISPICKVAL(Issue_KPI__c,&quot;Buyback - Counter-Proposal rate&quot;),0.50,
if(ISPICKVAL(Issue_KPI__c,&quot;Buyback - Counter-Proposal (Non Functional) rate&quot;),0.25,
if(ISPICKVAL(Issue_KPI__c,&quot;Buyback - Cancellation (Functional) rate&quot;),0.15,
if(ISPICKVAL(Issue_KPI__c,&quot;Buyback - Cancellation rate&quot;),0.15,
if(ISPICKVAL(Issue_KPI__c,&quot;Buyback - Late Processing rate&quot;),0.40,
if(ISPICKVAL(Issue_KPI__c,&quot;Buyback - Late Response rate&quot;),0.40,




0)))))))))))))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rate - Critical threshold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>