force-app/main/default/objects/Alert__c/fields/Reason_to_refuse__c.field-meta.xml
<CustomField>
    <fullName>Reason_to_refuse__c</fullName>
    <label>Reason to refuse</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Issue_KPI__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Reason_to_refuse_the_FU</valueSetName>
    </valueSet>
</CustomField>