force-app/main/default/objects/Alert__c/fields/Reason_to_refuse_comment__c.field-meta.xml
<CustomField>
    <fullName>Reason_to_refuse_comment__c</fullName>
    <label>Reason to refuse - comment</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>