force-app/main/default/objects/Alert__c/fields/Referent_Champion__c.field-meta.xml
<CustomField>
    <fullName>Referent_Champion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referent Champion</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Alerts2</relationshipName>
    <type>Lookup</type>
</CustomField>