force-app/main/default/objects/Alert__c/fields/RelatedMOFailed__c.field-meta.xml
<CustomField>
    <fullName>RelatedMOFailed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Related MO failed</label>
    <type>Checkbox</type>
</CustomField>