force-app/main/default/objects/Alert__c/fields/Sales_limitation_applied__c.field-meta.xml
<CustomField>
    <fullName>Sales_limitation_applied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sales limitation applied</label>
    <type>Checkbox</type>
</CustomField>