force-app/main/default/objects/Alert__c/fields/Sales_Tax_Details__c.field-meta.xml
<CustomField>
    <fullName>Sales_Tax_Details__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sales Tax Details</label>
    <type>Checkbox</type>
</CustomField>