force-app/main/default/objects/Alert__c/fields/Saved_reason__c.field-meta.xml
<CustomField>
    <fullName>Saved_reason__c</fullName>
    <label>Saved reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Action plan with KPI OK on a 2-week cohort (OTDR Only)</fullName>
            </value>
            <value>
                <fullName>BM fault (e.g. catalog, service, Parcel Lab, ...)</fullName>
            </value>
            <value>
                <fullName>Business Arbitration</fullName>
            </value>
            <value>
                <fullName>Defective OK at the model or category level (on 100+ orders)</fullName>
            </value>
            <value>
                <fullName>Duplicate MP</fullName>
            </value>
            <value>
                <fullName>Event external to BM / merchant / 3rd party provider (Storm, Brexit, ...)</fullName>
            </value>
            <value>
                <fullName>GateKeeper batch Certification</fullName>
            </value>
            <value>
                <fullName>KPI OK 7 days in a row</fullName>
            </value>
            <value>
                <fullName>Long-term exception</fullName>
            </value>
            <value>
                <fullName>Not enough cases at the ETA</fullName>
            </value>
            <value>
                <fullName>Rate better than the threshold at the ETA</fullName>
            </value>
            <value>
                <fullName>Safety / Legal issue already properly handled by Merchant</fullName>
            </value>
            <value>
                <fullName>Service subscription</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>