force-app/main/default/objects/Alert__c/fields/Sent_to_agency_on__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_agency_on__c</fullName>
    <label>Sent to agency on</label>
    <type>Date</type>
</CustomField>