force-app/main/default/objects/Alert__c/fields/SEPA_Payment_activated__c.field-meta.xml
<CustomField>
    <fullName>SEPA_Payment_activated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SEPA Payment activated</label>
    <type>Checkbox</type>
</CustomField>