force-app/main/default/objects/Alert__c/fields/Situation__c.field-meta.xml
<CustomField>
    <fullName>Situation__c</fullName>
    <label>Situation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1st case - Warning</fullName>
            </value>
            <value>
                <fullName>2nd case or more - Investigation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>