force-app/main/default/objects/Alert__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Alert</fullName>
            </value>
            <value>
                <fullName>Charter breach identified</fullName>
            </value>
            <value>
                <fullName>In progress</fullName>
            </value>
            <value>
                <fullName>Not compliant</fullName>
            </value>
            <value>
                <fullName>Monitoring Period</fullName>
            </value>
            <value>
                <fullName>Last chance</fullName>
            </value>
            <value>
                <fullName>Doc validated pending MO result</fullName>
            </value>
            <value>
                <fullName>Refused</fullName>
            </value>
            <value>
                <fullName>Saved</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Doc missing</fullName>
            </value>
            <value>
                <fullName>Doc received and accepted</fullName>
            </value>
            <value>
                <fullName>Exit requested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>