force-app/main/default/objects/Alert__c/fields/Sub_Reason__c.field-meta.xml
<CustomField>
    <fullName>Sub_Reason__c</fullName>
    <label>Sub Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Main_Reason__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Accessories Rate</fullName>
            </value>
            <value>
                <fullName>Billing / Payout</fullName>
                <isActive>false</isActive>
                <label>Billing / Payout</label>
            </value>
            <value>
                <fullName>BM Policies &amp; Fees (other than &quot;Billing / Payout&quot; &amp; &quot;CCBM&quot;)</fullName>
                <isActive>false</isActive>
                <label>BM Policies &amp; Fees (other than &quot;Billing / Payout&quot; &amp; &quot;CCBM&quot;)</label>
            </value>
            <value>
                <fullName>Business Paused</fullName>
            </value>
            <value>
                <fullName>Buyback - Cancellation (Functional) rate</fullName>
            </value>
            <value>
                <fullName>Buyback - Charter breaches</fullName>
            </value>
            <value>
                <fullName>Buyback - Counter-Proposal (Functional) rate</fullName>
            </value>
            <value>
                <fullName>Buyback - Counter-Proposal (Non Functional) rate</fullName>
                <isActive>false</isActive>
                <label>Buyback - Counter-Proposal (Non Functional) rate</label>
            </value>
            <value>
                <fullName>Buyback Exit due to Sales Exit</fullName>
                <isActive>false</isActive>
                <label>Buyback Exit due to Sales Exit</label>
            </value>
            <value>
                <fullName>Buyback - Late Processing rate</fullName>
            </value>
            <value>
                <fullName>Buyback - Late Response rate</fullName>
            </value>
            <value>
                <fullName>Buyback - Payment issue</fullName>
            </value>
            <value>
                <fullName>Buyback - Pending Order rate</fullName>
            </value>
            <value>
                <fullName>Buybox Competition</fullName>
            </value>
            <value>
                <fullName>Cancellation Rate</fullName>
            </value>
            <value>
                <fullName>Catalog Issue</fullName>
            </value>
            <value>
                <fullName>CCBM</fullName>
            </value>
            <value>
                <fullName>Charter Breaches</fullName>
            </value>
            <value>
                <fullName>Closing Business</fullName>
                <isActive>false</isActive>
                <label>Closing Business</label>
            </value>
            <value>
                <fullName>CSAT</fullName>
            </value>
            <value>
                <fullName>Debt</fullName>
                <isActive>false</isActive>
                <label>Debt</label>
            </value>
            <value>
                <fullName>Defective Rate</fullName>
            </value>
            <value>
                <fullName>Esthetic Rate</fullName>
            </value>
            <value>
                <fullName>Forced exit due to Inactivity</fullName>
            </value>
            <value>
                <fullName>Gross Fault / Fraud</fullName>
                <isActive>false</isActive>
                <label>Gross Fault / Fraud</label>
            </value>
            <value>
                <fullName>Invoicing Compliance</fullName>
                <isActive>false</isActive>
                <label>Invoicing Compliance</label>
            </value>
            <value>
                <fullName>Late Delivery Rate</fullName>
            </value>
            <value>
                <fullName>Late Response Rate</fullName>
            </value>
            <value>
                <fullName>Multiple MP/LC</fullName>
            </value>
            <value>
                <fullName>Mystery Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>