force-app/main/default/objects/Alert__c/fields/Tableau_KPI__c.field-meta.xml
<CustomField>
    <fullName>Tableau_KPI__c</fullName>
    <formula>if( ISPICKVAL(Issue_KPI__c, &quot;Defective Rate&quot;), &quot;Defectiverate&quot;,
if( ISPICKVAL(Issue_KPI__c, &quot;Accessories Rate&quot;), &quot;Accessoriesrate&quot;,
if( ISPICKVAL(Issue_KPI__c, &quot;Esthetic Rate&quot;), &quot;Estheticalrate&quot;,
if( ISPICKVAL(Issue_KPI__c, &quot;Wrong Product Rate&quot;), &quot;Wrongproductrate&quot;,
if( ISPICKVAL(Issue_KPI__c, &quot;Cancellation Rate&quot;), &quot;Cancellationrate&quot;,
if( ISPICKVAL(Issue_KPI__c, &quot;Late Delivery Rate&quot;), &quot;Latedeliveryrate&quot;,
if( ISPICKVAL(Issue_KPI__c, &quot;CSAT&quot;), &quot;CSATrate&quot;,
if( ISPICKVAL(Issue_KPI__c, &quot;Late Response Rate&quot;), &quot;Lateresponserate&quot;,


&quot;Overview&quot;))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tableau KPI</label>
    <type>Text</type>
</CustomField>