force-app/main/default/objects/Alert__c/fields/Tableau_P_K__c.field-meta.xml
<CustomField>
    <fullName>Tableau_P_K__c</fullName>
    <formula>if( ISPICKVAL( Business_Name__r.Zone__c , &quot;en-us&quot;), text( Business_Name__r.Back_Office_PK__c ) &amp; &quot;US&quot;, text( Business_Name__r.Back_Office_PK__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tableau P.K.</label>
    <type>Text</type>
</CustomField>