force-app/main/default/objects/Alert__c/fields/Tech_Approved_Manager__c.field-meta.xml
<CustomField>
    <fullName>Tech_Approved_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tech_Approved_Manager</label>
    <type>Checkbox</type>
</CustomField>