force-app/main/default/objects/Alert__c/fields/Tech_Count_early_release__c.field-meta.xml
<CustomField>
    <fullName>Tech_Count_early_release__c</fullName>
    <label>Tech Count early release</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>