force-app/main/default/objects/Alert__c/fields/Tech_Critical_Rate_Exception__c.field-meta.xml
<CustomField>
    <fullName>Tech_Critical_Rate_Exception__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tech Critical Rate Exception</label>
    <type>Checkbox</type>
</CustomField>