force-app/main/default/objects/Alert__c/fields/Tech_Debt_Above_10K__c.field-meta.xml
<CustomField>
    <fullName>Tech_Debt_Above_10K__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tech_Debt_Above_10K</label>
    <type>Checkbox</type>
</CustomField>