force-app/main/default/objects/Alert__c/fields/Tech_Debt_Amount_Range__c.field-meta.xml
<CustomField>
    <fullName>Tech_Debt_Amount_Range__c</fullName>
    <label>Tech Debt Amount Range</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0 - 5K</fullName>
            </value>
            <value>
                <fullName>5K - 10K</fullName>
            </value>
            <value>
                <fullName>10K - 20K</fullName>
            </value>
            <value>
                <fullName>20K - more</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>