force-app/main/default/objects/Alert__c/fields/TECH_DEBUG_SCHEDULE__c.field-meta.xml
<CustomField>
    <fullName>TECH_DEBUG_SCHEDULE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TECH_DEBUG_SCHEDULE</label>
    <type>Checkbox</type>
</CustomField>