force-app/main/default/objects/Alert__c/fields/TECH_merchant_zone__c.field-meta.xml
<CustomField>
    <fullName>TECH_merchant_zone__c</fullName>
    <formula>TEXT(Business_Name__r.Zone__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_merchant_zone</label>
    <type>Text</type>
</CustomField>