force-app/main/default/objects/Alert__c/fields/TECH_New_Alert_Limitation__c.field-meta.xml
<CustomField>
    <fullName>TECH_New_Alert_Limitation__c</fullName>
    <label>TECH_New Alert Limitation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>