force-app/main/default/objects/Alert__c/fields/TECH_New_ETA__c.field-meta.xml
<CustomField>
    <fullName>TECH_New_ETA__c</fullName>
    <label>TECH_New ETA</label>
    <type>Date</type>
</CustomField>