force-app/main/default/objects/Alert__c/fields/TECH_New_Stage_2__c.field-meta.xml
<CustomField>
    <fullName>TECH_New_Stage_2__c</fullName>
    <label>TECH_New Stage_2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monitoring Period</fullName>
            </value>
            <value>
                <fullName>Last chance</fullName>
            </value>
            <value>
                <fullName>Refused</fullName>
            </value>
            <value>
                <fullName>Saved</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>