force-app/main/default/objects/Alert__c/fields/TECH_New_Stage__c.field-meta.xml
<CustomField>
    <fullName>TECH_New_Stage__c</fullName>
    <label>TECH_New Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>