force-app/main/default/objects/Alert__c/fields/Tech_Policy_Violation_Flag__c.field-meta.xml
<CustomField>
    <fullName>Tech_Policy_Violation_Flag__c</fullName>
    <label>Tech Policy Violation Flag</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>