force-app/main/default/objects/Alert__c/fields/Trigger_MO_in_advance__c.field-meta.xml
<CustomField>
    <fullName>Trigger_MO_in_advance__c</fullName>
    <businessOwnerUser>oceane.dufour@backmarket.com</businessOwnerUser>
    <defaultValue>false</defaultValue>
    <label>Trigger MO in advance</label>
    <type>Checkbox</type>
</CustomField>