force-app/main/default/objects/Alert__c/fields/VAT_Number__c.field-meta.xml
<CustomField>
    <fullName>VAT_Number__c</fullName>
    <formula>Business_Name__r.VAT_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VAT Number</label>
    <type>Text</type>
</CustomField>