force-app/main/default/objects/Alert__c/fields/VAT_Regiment_details__c.field-meta.xml
<CustomField>
    <fullName>VAT_Regiment_details__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick the box if the invoice states: VAT non applicate &apos;Special Scheme - second hand goods&apos;.</inlineHelpText>
    <label>VAT Regiment details</label>
    <type>Checkbox</type>
</CustomField>