force-app/main/default/objects/Alert__c/fields/VAT_Type__c.field-meta.xml
<CustomField>
    <fullName>VAT_Type__c</fullName>
    <inlineHelpText>Indicate the VAT type displayed on the invoice. It should be &apos;Classic&apos; if the merchant is applying the VAT rate of the customer&apos;s country (usually around 20%). It should be &apos;Marginal&apos; if there is no VAT amount but the merchant is stating &apos;VAT non applicate - Special Scheme - second hand goods&apos;. It should be &apos;None&apos; if none of these two.</inlineHelpText>
    <label>VAT Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Classic</fullName>
            </value>
            <value>
                <fullName>Marginal</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>