force-app/main/default/objects/Alert__c/recordTypes/Business_Alerts.recordType-meta.xml
<RecordType>
    <fullName>Business_Alerts</fullName>
    <active>true</active>
    <label>Business Alerts</label>
</RecordType>