force-app/main/default/objects/Alert__c/recordTypes/Financial_Issue.recordType-meta.xml
<RecordType>
    <fullName>Financial_Issue</fullName>
    <active>true</active>
    <label>Financial Issue</label>
</RecordType>