force-app/main/default/objects/Alert__c/recordTypes/Invoice_Compliance_Audit.recordType-meta.xml
<RecordType>
    <fullName>Invoice_Compliance_Audit</fullName>
    <active>true</active>
    <label>Invoice Compliance Audit</label>
</RecordType>