force-app/main/default/objects/Alert__c/recordTypes/Monitoring_Period_Buyback.recordType-meta.xml
<RecordType>
    <fullName>Monitoring_Period_Buyback</fullName>
    <active>true</active>
    <label>Monitoring Period - Buyback</label>
</RecordType>