force-app/main/default/objects/Alert__c/recordTypes/Monitoring_Period_Sales.recordType-meta.xml
<RecordType>
    <fullName>Monitoring_Period_Sales</fullName>
    <active>true</active>
    <label>Monitoring Period - Sales</label>
</RecordType>