force-app/main/default/objects/Alert__c/recordTypes/Monitoring_Period_Sales_Archived.recordType-meta.xml
<RecordType>
    <fullName>Monitoring_Period_Sales_Archived</fullName>
    <active>true</active>
    <label>Monitoring Period - Sales - Archived</label>
</RecordType>