force-app/main/default/objects/Alert__c/recordTypes/MOP_alert.recordType-meta.xml
<RecordType>
    <fullName>MOP_alert</fullName>
    <active>true</active>
    <label>MOP alert</label>
</RecordType>