force-app/main/default/objects/Alert__c/recordTypes/Severe_Issue.recordType-meta.xml
<RecordType>
    <fullName>Severe_Issue</fullName>
    <active>true</active>
    <label>Legal &amp; Safety Issue</label>
</RecordType>