force-app/main/default/objects/Alert__c/validationRules/Require_Order_Id.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Order_Id</fullName>
    <active>true</active>
    <description>Require Order Id for Severe Issue Record Type.</description>
    <errorConditionFormula>AND (ISNEW() ,
 RecordType.DeveloperName = &quot;Severe_Issue&quot;,
  ISBLANK( Order_IDs__c )
)</errorConditionFormula>
    <errorDisplayField>Order_IDs__c</errorDisplayField>
    <errorMessage>Please add Order Id to this alert.</errorMessage>
</ValidationRule>