force-app/main/default/objects/Alert__c/listViews/All_alerts.listView-meta.xml
<ListView>
    <fullName>All_alerts</fullName>
    <columns>NAME</columns>
    <columns>Business_Name__c</columns>
    <columns>P_K__c</columns>
    <columns>Issue_KPI__c</columns>
    <columns>Has_begun_on__c</columns>
    <columns>Stage__c</columns>
    <columns>ETA__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Alert__c.Monitoring_Period_Sales</value>
    </filters>
    <filters>
        <field>Issue_KPI__c</field>
        <operation>equals</operation>
        <value>CSAT,Late Response Rate</value>
    </filters>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Monitoring Period,Last chance</value>
    </filters>
    <label>All alerts</label>
</ListView>