force-app/main/default/objects/Alert__c/listViews/Monitoring_Periods_Buyback_Action_Plans.listView-meta.xml
<ListView>
    <fullName>Monitoring_Periods_Buyback_Action_Plans</fullName>
    <columns>NAME</columns>
    <columns>Business_Name__c</columns>
    <columns>AlertLimitation__c</columns>
    <columns>Issue_KPI__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>ETA__c</columns>
    <columns>Action_plan_comment__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Alert__c.Monitoring_Period_Buyback</value>
    </filters>
    <label>Monitoring Periods Buyback -Action Plans</label>
</ListView>