force-app/main/default/objects/Alert__c/listViews/My_Sellers_Alerts.listView-meta.xml
<ListView>
    <fullName>My_Sellers_Alerts</fullName>
    <columns>NAME</columns>
    <columns>Business_Name__c</columns>
    <columns>P_K__c</columns>
    <columns>Issue_KPI__c</columns>
    <columns>Stage__c</columns>
    <columns>ETA__c</columns>
    <columns>Rate_Critical_threshold__c</columns>
    <columns>Objective_to_reach__c</columns>
    <columns>Actual_Rate__c</columns>
    <columns>Actual_Number_of_cases__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Sellers&apos; Alerts</label>
</ListView>