force-app/main/default/objects/Alert__c/listViews/Seller_s_in_MP_LC_ETA_past.listView-meta.xml
<ListView>
    <fullName>Seller_s_in_MP_LC_ETA_past</fullName>
    <columns>NAME</columns>
    <columns>P_K__c</columns>
    <columns>Business_Name__c</columns>
    <columns>Issue_KPI__c</columns>
    <columns>ETA__c</columns>
    <columns>ETA_for_test__c</columns>
    <columns>Stage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ETA__c</field>
        <operation>lessThan</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Monitoring Period,Last chance</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Alert__c.Monitoring_Period_Sales</value>
    </filters>
    <label>Sellers in MP/LC ETA past</label>
</ListView>